yaml/nginx-ingress/v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp
      version: v1
  template:
    metadata:
      labels:
        app: sampleapp
        version: v1
    spec:
      containers:
      - name: sampleapp
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html
        - name: config-volume
          mountPath: /usr/share/nginx/html/bg
        - name: config-volume
          mountPath: /usr/share/nginx/html/canary
      volumes:
      - name: config-volume
        configMap:
          name: sampleapp-v1

---
apiVersion: v1
kind: Service
metadata:
  name: ingress-sampleapp-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: sampleapp
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-canary-sampleapp-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: sampleapp
    version: v1
